# icalk

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  autogen.sh  configure.in  jingle-develop-guide-cn  libjingle-develop-guide-cn
Bot/: BotCalk.cpp  BotCalk.h  main.cpp  make.sh
data/: Makefile.am  icalk.desktop.in.in
data/images/: Makefile.am
data/smiley/default/: Makefile.am  theme
data/sounds/: Makefile.am
data/ui/: Makefile.am  about.glade  main_window.glade  msg_window.glade  service_discovery_window.glade  statusMsg.glade
doc/: Makefile.am  italk.dot
libjingle-0.4.0/: Makefile.in  configure
libjingle-0.4.0/autom4te.cache/: output.0  requests  traces.0
libjingle-0.4.0/talk/: Makefile.in
libjingle-0.4.0/talk/base/: Makefile.in
libjingle-0.4.0/talk/examples/: Makefile.in
libjingle-0.4.0/talk/examples/call/: Makefile.in
libjingle-0.4.0/talk/examples/login/: Makefile.in
libjingle-0.4.0/talk/examples/pcp/: Makefile.in
libjingle-0.4.0/talk/p2p/: Makefile.in
libjingle-0.4.0/talk/p2p/base/: Makefile.in
libjingle-0.4.0/talk/p2p/client/: Makefile.in
libjingle-0.4.0/talk/session/: Makefile.in
libjingle-0.4.0/talk/session/fileshare/: Makefile.in
libjingle-0.4.0/talk/session/phone/: Makefile.in  linphonemediaengine.cc
libjingle-0.4.0/talk/session/tunnel/: Makefile.in
libjingle-0.4.0/talk/xmllite/: Makefile.in
libjingle-0.4.0/talk/xmpp/: Makefile.in
libjingle/talk/base/: common.cc
libjingle/talk/examples/login/: Makefile.in
libjingle/talk/examples/pcp/: Makefile.in
libjingle/talk/p2p/: Makefile.in
libjingle/talk/p2p/base/: session.cc
libjingle/talk/session/: Makefile.in
libjingle/talk/session/fileshare/: Makefile.in
libjingle/talk/xmpp/: xmpptask.cc
plugins/: gcc.sh  main.cpp  sample.cpp  sample.h  testplugin.h
po/: ChangeLog  POTFILES.in  zh_CN.po
src/: Bodies.cpp  Bodies.h  Buddy.cpp  Buddy.h  BuddyInfoWindow.cpp  BuddyInfoWindow.h  BuddyList.cpp  BuddyList.h  BuddyView.cpp  BuddyView.h  CommandBar.cpp  CommandBar.h  ConfXml.cpp  ConfXml.h  FT.cpp  FT.h  FTWidget.cpp  FTWidget.h  IMHtml.cpp  IMHtml.h  JingleSession.cpp  JingleSession.h  JingleSessionManager.cpp  JingleSessionManager.h  JingleShareSession.h  JingleVoiceCaller.h  JingleVoiceSession.cpp  JingleVoiceSession.h  JingleWatchSessionTask.cpp  JingleWatchSessionTask.h  MVC.h  MainWindow.cpp  MainWindow.h  Makefile.am  MemberList.cpp  MemberList.h  MsgBox.cpp  MsgBox.h  MsgLog.cpp  MsgLog.h  (+60 more)
src/stun/: myclient.cpp  stun.cpp  stun.h  tags  udp.cpp  udp.h
