pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = icalk.png

icalkimagesdir = $(pkgdatadir)/images
icalkimages_DATA = 	\
	       typed.png \
	       crypto.png \
	       default.png  \
	       online.png  \
	       offline.png  \
	       status_online.png \
	       status_ofline.png   \
	       status_dnd.png  \
	       status_ex.png   \
	       status_away.png  \
	       menu_chat.png 	\
	       menu_log.png 	\
	       menu_add.png 	\
	       insert-fonts.png \
	       insert-link.png  \
	       insert-image.png \
	       insert-smiley.png \
	       info.png \
	       edit.png 	\
	       disco.png 	\
	       CallDown.png 	\
	       CallOver.png 	\
	       group.png 	 \
	       loading.gif 	\
	       unavailable.png	\
	       Xa.png 		\
	       log-in.png 	\
	       log-out.png 	\
	       dnd.png 		\
	       room.png 	\
	       transport.png	\
	       bot.png 		\
	       msn.png		\
	       other.png	\
	       groupchat.png	\
	       voice.png 	\
	       extended_away.png \
	       sms.png 		\
	       bytestreams.png  \
	       icq.png 		\
	       irc.png 		\
	       rss.png 		\
	       pubsub.png 	\
	       mail.png 	\
	       yahoo.png 	\
	       sip.png 		\
	       avatar.png

EXTRA_DIST = $(pixmaps_DATA) $(icalkimages_DATA)

