icalk_ui = main_window.glade \
	   msg_window.glade  \
	   service_discovery_window.glade \
	   statusMsg.glade \
	   about.glade   \
	   logo.png \
	   online.png \
	   crypto.png \
	   video.png  \
	   audio.png  \
	   add.png    \
	   bookmark.png \
	   icalk.png 	\
	   info.png	\
	   expand.png 	\
	   show.png 	\
	   default.png	\
	   file-send.png \
	   mail.png 	\
	   icon.png 	\
	   typed.png 


EXTRA_DIST = \
	     $(icalk_ui)

icalkuidir = $(pkgdatadir)/ui
icalkui_DATA = $(EXTRA_DIST)
