icalk_smiley = \
	       cool.png \
	       crazy.png
QQ_SMILEYS = \
        qq_smiley_0.gif \
        qq_smiley_10.gif \
        qq_smiley_11.gif \
        qq_smiley_12.gif \
        qq_smiley_13.gif \
        qq_smiley_14.gif \
        qq_smiley_15.gif \
        qq_smiley_16.gif \
        qq_smiley_17.gif \
        qq_smiley_18.gif \
        qq_smiley_19.gif \
        qq_smiley_1.gif \
        qq_smiley_20.gif \
        qq_smiley_21.gif \
        qq_smiley_22.gif \
        qq_smiley_23.gif \
        qq_smiley_24.gif \
        qq_smiley_25.gif \
        qq_smiley_26.gif \
        qq_smiley_27.gif \
        qq_smiley_28.gif \
        qq_smiley_29.gif \
        qq_smiley_2.gif \
        qq_smiley_30.gif \
        qq_smiley_31.gif \
        qq_smiley_32.gif \
        qq_smiley_33.gif \
        qq_smiley_34.gif \
        qq_smiley_35.gif \
        qq_smiley_36.gif \
        qq_smiley_37.gif \
        qq_smiley_38.gif \
        qq_smiley_39.gif \
        qq_smiley_3.gif \
        qq_smiley_40.gif \
        qq_smiley_41.gif \
        qq_smiley_42.gif \
        qq_smiley_43.gif \
        qq_smiley_44.gif \
        qq_smiley_45.gif \
        qq_smiley_46.gif \
        qq_smiley_47.gif \
        qq_smiley_48.gif \
        qq_smiley_49.gif \
        qq_smiley_4.gif \
        qq_smiley_50.gif \
        qq_smiley_51.gif \
        qq_smiley_52.gif \
        qq_smiley_53.gif \
        qq_smiley_54.gif \
        qq_smiley_55.gif \
        qq_smiley_56.gif \
        qq_smiley_57.gif \
        qq_smiley_58.gif \
        qq_smiley_59.gif \
        qq_smiley_5.gif \
        qq_smiley_60.gif \
        qq_smiley_61.gif \
        qq_smiley_62.gif \
        qq_smiley_63.gif \
        qq_smiley_64.gif \
        qq_smiley_65.gif \
        qq_smiley_66.gif \
        qq_smiley_67.gif \
        qq_smiley_68.gif \
        qq_smiley_69.gif \
        qq_smiley_6.gif \
        qq_smiley_70.gif \
        qq_smiley_71.gif \
        qq_smiley_72.gif \
        qq_smiley_73.gif \
        qq_smiley_74.gif \
        qq_smiley_75.gif \
        qq_smiley_76.gif \
        qq_smiley_77.gif \
        qq_smiley_78.gif \
        qq_smiley_79.gif \
        qq_smiley_7.gif \
        qq_smiley_80.gif \
        qq_smiley_81.gif \
        qq_smiley_82.gif \
        qq_smiley_83.gif \
        qq_smiley_84.gif \
        qq_smiley_85.gif \
        qq_smiley_86.gif \
        qq_smiley_87.gif \
        qq_smiley_88.gif \
        qq_smiley_89.gif \
        qq_smiley_8.gif \
        qq_smiley_90.gif \
        qq_smiley_91.gif \
        qq_smiley_92.gif \
        qq_smiley_93.gif \
        qq_smiley_94.gif \
        qq_smiley_95.gif \
        qq_smiley_9.gif

icalk_smiley_theme = \
		     theme
EXTRA_DIST = \
	     $(icalk_smiley) \
	     $(icalk_smiley_theme) \
	     $(QQ_SMILEYS)

icalksmileydir = $(pkgdatadir)/smiley/default
icalksmiley_DATA = $(EXTRA_DIST)
