icalk_smiley = \
	shock.png \
	curl-lip.png \
	desire.png \
	dazed.png \
	party.png \
	crying.png \
	bashful.png \
	shut-mouth.png \
	sleepy.png \
	weep.png \
	embarrassed.png \
	pissed-off.png \
	act-up.png \
	smile-big.png \
	smile.png \
	sad.png \
	glasses-cool.png \
	doctor.png \
	silly.png \
	sick.png \
	snicker.png \
	cute.png \
	disdain.png \
	arrogant.png \
	starving.png \
	yawn.png \
	terror.png \
	sweat.png \
	smirk.png \
	soldier.png \
	struggle.png \
	curse.png \
	question.png \
	quiet.png \
	hypnotized.png \
	excruciating.png \
	freaked-out.png \
	skeleton.png \
	hammer.png \
	bye.png \
	go-away.png \
	tremble.png \
	in-love.png \
	jump.png \
	search.png \
	lashes.png \
	pig.png \
	cat.png \
	dog.png \
	hug-left.png \
	coins.png \
	lamp.png \
	bowl.png \
	cake.png \
	thunder.png \
	bomb.png \
	knife.png \
	soccerball.png \
	musical-note.png \
	poop.png \
	coffee.png \
	eat.png \
	pill.png \
	rose.png \
	wilt.png \
	kiss.png \
	love.png \
	love-over.png \
	meeting.png \
	present.png \
	phone.png \
	clock.png \
	mail.png \
	tv.png \
	sun.png \
	moon.png \
	good.png \
	bad.png \
	handshake.png \
	victory.png \
	beauty.png \
	qq.png \
	blowkiss.png \
	angry.png \
	liquor.png \
	can.png \
	watermelon.png \
	rain.png \
	cloudy.png \
	snowman.png \
	star.png \
	girl.png \
	boy.png \
	skywalker.png \
	monkey.png

icalk_smiley_theme = \
		     theme
EXTRA_DIST = \
	     $(icalk_smiley) \
	     $(icalk_smiley_theme) 

icalksmileydir = $(pkgdatadir)/smiley/default
icalksmiley_DATA = $(EXTRA_DIST)
